<resources>
    <string name="app_name">Tomatito</string>

    <string name="navigation_title_pomodoro">Pomodoro</string>
    <string name="navigation_title_records">Records</string>

    <string name="action_settings">Settings</string>
    <string name="action_back">Go Back</string>

    <string name="pomodoro_edit_dialog_title">Pomodoro name</string>
    <string name="pomodoro_edit_dialog_ok">Edit</string>

    <string name="pomodoro_delete_dialog_title">Delete pomodoro</string>
    <string name="pomodoro_delete_dialog_message">Are you sure you want to delete this record?</string>
    <string name="pomodoro_delete_dialog_ok">Delete</string>

    <string name="unit_minutes">minutes</string>
    <string name="unit_pomodoros">pomodoros</string>

    <!-- Pomodoro fragment strings -->
    <string name="pomodoros_counter_title">Pomodoro:</string>
    <string name="breaks_counter_title">Break:</string>

    <!-- Records fragment strings -->
    <string name="no_records_message">There is no pomodoro records yet</string>
    <string name="loading_records_description">Loading pomodoro records</string>

    <!-- Notification strings -->
    <string name="notification_title_work">Pomodoro: Work</string>
    <string name="notification_text_work">It is time to go back to work</string>
    <string name="notification_title_short_break">Pomodoro: Short Break</string>
    <string name="notification_text_short_break">Take a short break from work</string>
    <string name="notification_title_long_break">Pomodoro: Long Break</string>
    <string name="notification_text_long_break">Take a long break from work</string>
    <string name="notification_title_end">Pomodoro: End</string>
    <string name="notification_text_end">Congratulations, you have finished the pomodoro!</string>

    <string name="notification_action_stop">Stop pomodoro</string>
    <string name="notification_action_restart">Restart pomodoro</string>

    <!-- Preferences strings -->
    <string name="prefs_pomodoro_title">Pomodoro settings</string>
    <string name="prefs_pomodoro_key" translatable="false">pomodoro-settings</string>
    <string name="prefs_alarm_title">Alarm settings</string>
    <string name="prefs_alarm_key" translatable="false">alarm-settings</string>
    <string name="prefs_storage_title">Storage settings</string>
    <string name="prefs_storage_key" translatable="false">storage-settings</string>

    <string name="pref_alarm_key" translatable="false">pomodoro-alarm</string>
    <string name="pref_alarm_default" translatable="false">true</string>
    <string name="pref_alarm_title">Notification</string>
    <string name="pref_alarm_summary">Pomodoro events will be alerted by a notification</string>

    <string name="pref_vibration_key" translatable="false">pomodoro-vibration</string>
    <string name="pref_vibration_default" translatable="false">true</string>
    <string name="pref_vibration_title">Vibration</string>
    <string name="pref_vibration_summary">The device will vibrate several times to alert you of the events</string>

    <string name="pref_pomodoro_time_key" translatable="false">pomodoro-work-time</string>
    <string name="pref_pomodoro_time_default" translatable="false">25</string>
    <string name="pref_pomodoro_time_title">Work time</string>

    <string name="pref_short_break_time_key" translatable="false">pomodoro-short-break-time</string>
    <string name="pref_short_break_time_default" translatable="false">5</string>
    <string name="pref_short_break_time_title">Short break time</string>

    <string name="pref_long_break_time_key" translatable="false">pomodoro-long-break-time</string>
    <string name="pref_long_break_time_default" translatable="false">30</string>
    <string name="pref_long_break_time_title">Long break time</string>

    <string name="pref_pomodoros_to_long_break_key" translatable="false">pomodoros-to-long-break</string>
    <string name="pref_pomodoros_to_long_break_default" translatable="false">4</string>
    <string name="pref_pomodoros_to_long_break_title">Pomodos to long break</string>

    <string name="pref_restore_default_key" translatable="false">restore-default-values</string>
    <string name="pref_restore_default_title">Restore default values</string>
    <string name="pref_restore_default_summary">The default values are recommended for all types of tasks</string>

    <string name="pref_storage_limit_key" translatable="false">storage-limit</string>
    <string name="pref_storage_limit_default" translatable="false">50</string>
    <string name="pref_storage_limit_title">Storage limit</string>

    <string name="pref_storage_clear_key" translatable="false">storage-clear</string>
    <string name="pref_storage_clear_title">Clear storage</string>
    <string name="pref_storage_clear_summary">All stored pomodoros are removed</string>

</resources>
